--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -237,3 +237,82 @@ input[type=submit] {
   background: #4aaaa5;
   border: 0 none;
 }
+
+
+
+
+@media screen and (max-width: 980px) {
+  .container {
+    width: 800px;
+  }
+  .main-section {
+    width: 63%;
+
+  }
+  .sidebar {
+    width: 35%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    width: 600px;
+
+  }
+  .main-section {
+    display: block;
+    padding: 27px;
+    width: 100%;
+  }
+  .sidebar {
+    clear: both;
+    float: left;
+    width: 100%;
+    max-width: 100%;
+  }
+  .work {
+    width: 250px;
+  
+}
+
+@media screen and (max-width: 640px) {
+  .container {
+    width: 500px;
+  }
+  .header {
+    position: static;
+    display: block;
+  }
+  .main-section {
+    width: 100%;
+  }
+  .sidebar {
+    clear: right;
+    float: left;
+    max-width:100%;
+  }
+  .work {
+    width: 425px;
+    margin: 10px;
+  }
+  #logo {
+    float: left;
+    display: block;
+    margin: 0 auto;
+    width: 100%;
+    height: 90px;
+    font-family: Georgia, Times, "Times New Roman", serif;
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 90px;
+    color: #fff;
+    text-align: center;
+    text-decoration: none;
+    background: #4aaaa5;
+  }
+  nav {
+    width: 100%;
+    display: block;
+    text-align: center;
+  }
+}
