--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -280,7 +280,7 @@ input[type=submit] {
 
 @media screen and (max-width: 640px) {
   .container {
-    width: 500px;
+    width: 100%;
   }
   .header {
     position: static;
